[gd_scene load_steps=18 format=2]

[ext_resource path="res://world/water.png" type="Texture" id=1]
[ext_resource path="res://ui/title.png" type="Texture" id=2]
[ext_resource path="res://ui/menu_plant.png" type="Texture" id=3]
[ext_resource path="res://ui/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://ui/panels/controllers/ControllersPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/fonts/ChakraPetch/ChakraPetch-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 227, -244 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "bg_move"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 227, -244 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "appearance"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 227, -244 ), Vector2( 227, 77 ), Vector2( 227, 70 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 357, 777 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/StartButton:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 126, 64 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/ExitButton:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35, 262 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainMenu/StartButton:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1.32853 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainMenu/ExitButton:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -2.00897 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerCountMenu:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 357, 777 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerCountMenu/OneButton:rect_rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PlayerCountMenu/TwoButton:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerCountMenu/ThreeButton:rect_rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("PlayerCountMenu/FourButton:rect_rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("PlayerCountMenu/BackButton:rect_rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ControllersPanel:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1070, 62 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "controllers_appearance"
tracks/0/type = "value"
tracks/0/path = NodePath("ControllersPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1.86606, 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 1070, 62 ), Vector2( 200, 62 ), Vector2( 215, 62 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "count_appearance"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerCountMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.401, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 357, 777 ), Vector2( 357, 438 ), Vector2( 357, 430 ), Vector2( 357, 438 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerCountMenu/OneButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.2, 22.2, -17.0074, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerCountMenu/TwoButton:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 26.5, 26.5, -8.82686, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerCountMenu/ThreeButton:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.4, 22.4, -13.3732, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerCountMenu/FourButton:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 18.8, 18.8, -6.10166, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerCountMenu/BackButton:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 21.0, 21.0, -12.741, 0.0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "count_disappearance"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerCountMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 357, 438 ), Vector2( 357, 777 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerCountMenu/OneButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.5114, -20.5114, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerCountMenu/TwoButton:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -11.3793, -11.3793, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerCountMenu/ThreeButton:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.3323, -15.3323, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerCountMenu/FourButton:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -9.00303, -9.00303, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerCountMenu/BackButton:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -16.0355, -16.0355, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "main_appearance"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.401, 0.5 ),
"transitions": PoolRealArray( 2.37841, 0.366022, 1, 1 ),
"update": 0,
"values": [ Vector2( 357, 777 ), Vector2( 357, 430 ), Vector2( 357, 424 ), Vector2( 357, 438 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/StartButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.241, 22.241, -17.0745, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/ExitButton:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 22.7569, 22.7569, -16.2281, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "main_disappearance"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.46229, 2.37841 ),
"update": 0,
"values": [ Vector2( 357, 438 ), Vector2( 357, 777 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/StartButton:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -1.32853, -7.82007, -22.8, -22.8, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/ExitButton:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -2.00897, -8.83982, -22.8, -22.8, 0.0 ]
}

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 6 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 436.0, 699.0, 427.0 ],
"_edit_vertical_guides_": [ 512.0, 648.0 ]
}

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 768.0
rect_pivot_offset = Vector2( 512, 384 )
texture = ExtResource( 1 )
stretch_mode = 2

[node name="BackGroundPlayer" type="AnimationPlayer" parent="."]
autoplay = "bg_move"
anims/RESET = SubResource( 1 )
anims/bg_move = SubResource( 2 )

[node name="Title" type="TextureRect" parent="."]
margin_left = 227.0
margin_top = -244.0
margin_right = 803.0
margin_bottom = -27.9999
texture = ExtResource( 2 )

[node name="TitlePlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/appearance = SubResource( 4 )

[node name="MainMenu" type="Control" parent="."]
margin_left = 357.0
margin_top = 777.0
margin_right = 665.0
margin_bottom = 1138.0

[node name="bg" type="TextureRect" parent="MainMenu"]
margin_top = -3.0
margin_right = 210.0
margin_bottom = 337.0
texture = ExtResource( 3 )

[node name="StartButton" type="Button" parent="MainMenu"]
margin_left = 126.0
margin_top = 64.0
margin_right = 291.0
margin_bottom = 96.0001
rect_rotation = -1.32853
rect_pivot_offset = Vector2( 29, 15.8869 )
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "Start"

[node name="ExitButton" type="Button" parent="MainMenu"]
margin_left = 35.0
margin_top = 262.0
margin_right = 200.0
margin_bottom = 294.0
rect_rotation = -2.00897
rect_pivot_offset = Vector2( 38, 16 )
focus_neighbour_top = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
text = "Exit game"

[node name="PlayerCountMenu" type="Control" parent="."]
margin_left = 357.0
margin_top = 777.0
margin_right = 665.0
margin_bottom = 1138.0

[node name="bg" type="TextureRect" parent="PlayerCountMenu"]
margin_top = -3.0
margin_right = 210.0
margin_bottom = 337.0
texture = ExtResource( 3 )

[node name="OneButton" type="Button" parent="PlayerCountMenu"]
margin_left = 126.0
margin_top = 35.0
margin_right = 291.0
margin_bottom = 67.0001
rect_pivot_offset = Vector2( 29, 15.8869 )
focus_neighbour_bottom = NodePath("../TwoButton")
focus_next = NodePath("../TwoButton")
disabled = true
text = "1 player"

[node name="TwoButton" type="Button" parent="PlayerCountMenu"]
margin_left = 132.0
margin_top = 91.0
margin_right = 297.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 29, 15.8869 )
focus_neighbour_top = NodePath("../OneButton")
focus_neighbour_bottom = NodePath("../ThreeButton")
focus_next = NodePath("../ThreeButton")
focus_previous = NodePath("../OneButton")
disabled = true
text = "2 players"

[node name="ThreeButton" type="Button" parent="PlayerCountMenu"]
margin_left = 90.0
margin_top = 150.0
margin_right = 255.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 29, 15.8869 )
focus_neighbour_top = NodePath("../TwoButton")
focus_neighbour_bottom = NodePath("../FourButton")
focus_next = NodePath("../FourButton")
focus_previous = NodePath("../TwoButton")
disabled = true
text = "3 players"

[node name="FourButton" type="Button" parent="PlayerCountMenu"]
margin_left = 48.0
margin_top = 203.0
margin_right = 213.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 38, 16 )
focus_neighbour_top = NodePath("../ThreeButton")
focus_neighbour_bottom = NodePath("../BackButton")
focus_next = NodePath("../BackButton")
focus_previous = NodePath("../ThreeButton")
disabled = true
text = "4 players"

[node name="BackButton" type="Button" parent="PlayerCountMenu"]
margin_left = 35.0
margin_top = 262.0
margin_right = 200.0
margin_bottom = 294.0
rect_pivot_offset = Vector2( 38, 16 )
focus_neighbour_top = NodePath("../FourButton")
focus_previous = NodePath("../FourButton")
disabled = true
text = "Back"

[node name="ControllersPanel" parent="." instance=ExtResource( 5 )]
margin_left = 1070.0
margin_top = 62.0
margin_right = 1665.0
margin_bottom = 720.0
active = false

[node name="MenuPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/controllers_appearance = SubResource( 10 )
anims/count_appearance = SubResource( 8 )
anims/count_disappearance = SubResource( 9 )
anims/main_appearance = SubResource( 6 )
anims/main_disappearance = SubResource( 7 )

[node name="MainHelp" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 680.0
margin_right = 412.0
margin_bottom = 770.0
custom_colors/default_color = Color( 0.129412, 0.12549, 0.113725, 1 )
custom_fonts/normal_font = SubResource( 11 )
text = "Press Escape to quit the game
Keyboard #1: arrows + Enter/Backspace
Keyboard #2: WASD + Space/Alt"

[node name="Version" type="Label" parent="."]
margin_left = 2.0
margin_right = 99.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0 )
text = "v0.1-alpha"
